--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.9",
     "expo": "~47.0.8",
+    "expo-camera": "^13.1.0",
     "expo-font": "~11.0.1",
+    "expo-location": "~15.0.1",
+    "expo-media-library": "^15.0.0",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-devtools": "^4.27.1",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-maps": "1.3.2",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "^0.18.10"
