--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.9",
+    "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.8",
     "expo-camera": "^13.1.0",
     "expo-font": "~11.0.1",
+    "expo-image-picker": "^14.0.2",
     "expo-location": "~15.0.1",
     "expo-media-library": "^15.0.0",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-devtools": "^4.27.1",
     "react-dom": "18.1.0",
@@ -27,7 +31,8 @@
     "react-native-maps": "1.3.2",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "^0.18.10"
+    "react-native-web": "^0.18.10",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
