--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.1",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.9",
     "@reduxjs/toolkit": "^1.9.1",
+    "eas-cli": "^3.1.1",
     "expo": "~47.0.8",
     "expo-camera": "^13.1.0",
     "expo-font": "~11.0.1",
