--- a/eas.json
+++ b/eas.json
@@ -5,12 +5,19 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel": "development"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel": "preview"
     },
-    "production": {}
+    "prod": {
+      "releaseChannel": "prod-v1"
+    },
+    "zhen4ik": {
+      "releaseChannel": "zhen4ik"
+    }
   },
   "submit": {
     "production": {}
